almost finish my design

--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
                     <h1>facebook</h1>
                     <h2>Facebook helps you connect and share with the people in your life.</h2>
                 </div>
+                <div class="contain-right">
+                    <form action="">
+                        <div class="input-all">
+                            <input type="text" placeholder="Email address of phone number">
+                            <br>
+                            <input type="password" placeholder="Password">
+                        </div>
+                        <div class="login">
+                            <input class="ass" type="submit" value="Log In">
+                        </div>
+                        <div class="forgot">
+                            <a href="#">Forgotten password?</a>
+                        </div>
+                        <div class="create-btn"><a class="dd" href="#">Create New Account</a></div>
+                    </form>
+                    <p class="aas"><a href="#">Create a Page</a> for a celebrity, band or business.</p>
+                </div>
             </div>
         </div>
     </div>
