Added footer section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="img/fevicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 </head>
+<!--I design this Page Just for fun and Learn Purpose. Happy Codeing-->
 <body>
     <div class="login-start">
         <div class="container">
@@ -34,6 +35,9 @@
                 </div>
             </div>
         </div>
+        <footer class="right-aj">
+            <p>&copy; <a href="https://www.facebook.com/ajauntors" target="_blank"><span class="link-up">AJ Auntor</span></a> 2021 | All rights reserved</p> 
+        </footer>
     </div>
 </body>
 </html>
