--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facebook - login or signup</title>
+    <title>Facebook - login or signup page</title>
     <link rel="shortcut icon" href="img/fevicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 </head>
