added some text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="img/fevicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<!--I design this Page Just for fun and Learn Purpose. Happy Codeing-->
+<!--I design this Page Just for fun and Learn Purpose. Happy Coding-->
 <body>
     <div class="login-start">
         <div class="container">
